--- a/Primer trimestre/html/estilopersonal.css
+++ b/Primer trimestre/html/estilopersonal.css
@@ -11,7 +11,7 @@ body{
 h1 {
     text-align: center;
     background: linear-gradient(to bottom right, blue, red);
-    background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -21,8 +21,9 @@ p {
     color: white;
 }
 
-#imagen {
+#foto {
     display: none;
+    margin: auto;
 }
 
 #caja {
