--- a/Primer trimestre/Artista/artista.css
+++ b/Primer trimestre/Artista/artista.css
@@ -24,6 +24,7 @@ main {
 
 header {
     width: 100%;
+    text-align: center;
 }
 
 article {
@@ -32,7 +33,7 @@ article {
     color: white;
     width: 30%;
     border: 2px dotted blueviolet;
-    height: 800px;
+    height: 700px;
 }
 
 #biografia {
@@ -67,6 +68,10 @@ a {
 aside {
     width: 39%;
     background-color: black;
+    height: 700px;
+    border: 2px solid red;
+    display: flex;
+    flex-wrap: wrap;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -76,4 +81,7 @@ aside {
 footer {
     background: linear-gradient(to right, red, black);
     height: fit-content;
+    width: 100%;
+    text-align: center;
+    border-radius: 20px;
 }
