--- a/Primer trimestre/Artista/artista.css
+++ b/Primer trimestre/Artista/artista.css
@@ -13,6 +13,13 @@ body {
     background-size: cover;
     background-position: center;
 }
+
+#soldados{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+}
 main {
     width: 90%;
     display: flex;
@@ -25,27 +32,31 @@ main {
 header {
     width: 100%;
     text-align: center;
+    background: linear-gradient(to bottom right, black, red);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 article {
     text-align: justify;
-    background-color: black;
+    background-color:red;
     color: white;
     width: 30%;
     border: 2px dotted blueviolet;
     height: 700px;
+    padding: 5px;
 }
 
 #biografia {
     border: 2px inset yellow;
-    background-color: red;
+    background-color: black;
 }
 
 nav {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 100%;
+    width: 98.5%;
     background: linearlinear-gradient(to bottom right, blue, red);
     margin: 0;
     padding: 0;
@@ -66,7 +77,7 @@ a {
 }
 
 aside {
-    width: 39%;
+    width: 35%;
     background-color: black;
     height: 700px;
     border: 2px solid red;
@@ -75,13 +86,14 @@ aside {
     text-align: center;
     align-items: center;
     justify-content: center;
+    padding: 5px;
 
 }
 
 footer {
     background: linear-gradient(to right, red, black);
     height: fit-content;
-    width: 100%;
+    width: 98.5%;
     text-align: center;
     border-radius: 20px;
 }
